[gd_scene load_steps=6 format=3 uid="uid://cmux8mig0khgw"]

[ext_resource type="Script" uid="uid://138h6g0ep008" path="res://Scenes/boat.gd" id="1_osfnv"]
[ext_resource type="Texture2D" uid="uid://bbsg17b611x7c" path="res://Sprites/etc/Boat.png" id="1_p60fo"]
[ext_resource type="PackedScene" uid="uid://dp6ro83eb7e6d" path="res://Scenes/Interaction/interaction.tscn" id="3_osfnv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p60fo"]
size = Vector2(44, 87)

[sub_resource type="CircleShape2D" id="CircleShape2D_5wbm4"]
radius = 59.03389

[node name="Boat" type="Node2D"]
script = ExtResource("1_osfnv")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("1_p60fo")

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-1, 0.5)
shape = SubResource("RectangleShape2D_p60fo")

[node name="Interaction" parent="." instance=ExtResource("3_osfnv")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interaction"]
shape = SubResource("CircleShape2D_5wbm4")

[node name="MoveBoatTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Unfade" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="timeout" from="MoveBoatTimer" to="." method="_on_move_boat_timer_timeout"]
[connection signal="timeout" from="Unfade" to="." method="_on_unfade_timeout"]
